fix: load of lsm vector from file system
(cherry picked from commit 7859f07d5b485e64469606fac2d596cd54df4ebe)